main.css
/* ... */
@media only screen and (max-width: 600px){
    .customer-review-description{
        font-size: 1rem;
        line-height: 1.5em;
    }
    .customer-review-images{
        grid-template-columns: 1fr;
        grid-template-rows: repeat(3,auto);
       
    }
    .customer-review-images > div:nth-child(1){
        grid-column: 1;
        grid-row: 1;
    }
    .customer-review-images > div:nth-child(2){
        grid-column: 1;
        grid-row: 2;
    }
    .customer-review-images > div:nth-child(3){
        grid-column: 1;
        grid-row: 3;
    }
}

/* === FAQS === */
.faqs{
    padding-bottom: 6rem;
}
.faqs > h2{
    text-align: left;
    padding-left: 1rem;
    color: var(--fc-rare);
    margin-bottom: 2rem;
}
.faqs > article{
    text-align: center;
    margin-bottom: 6rem;
}
.faqs > article > header{
    margin-bottom: 4rem;
}
.faqs > article > header > h2{
    font-size: 2rem;
    padding: 1em;
    background-color: hsl(0 0% 0% / 0.3);
}
.faqs > article:nth-of-type(1) .answer .option{
    max-width: 800px;
    font-size: 1.5rem;
    line-height: 2em;
    margin: 0 auto;
    padding: 2rem; 
}
.faqs > article:nth-of-type(2) .answer{
    padding: 0 2rem;

    display: grid;
    grid-template-columns: auto auto auto;
    grid-template-rows: auto;
    gap: 2rem;
}
.faqs > article:nth-of-type(3) .answer{
    padding: 0 2rem;

    display: grid;
    grid-template-columns: repeat(4,auto);
    grid-template-rows: repeat(2,auto);
    gap: 2rem;
}
.faqs > article:nth-of-type(3) .answer > .option:nth-of-type(5){
    grid-column: 1/3;
    grid-row: 2;
}
.faqs > article:nth-of-type(3) .answer > .option:nth-of-type(6){
    grid-column: 3/5;
    grid-row: 2;
}


.faqs > article:nth-of-type(3) .answer > .option:nth-of-type(5){
    display: grid;
    grid-template-columns: repeat(4,auto);
    grid-template-rows: repeat(2,auto);
    gap: 2rem;
}
.faqs > article:nth-of-type(3) .answer > .option:nth-of-type(6){
    display: grid;
    grid-template-columns: repeat(2,auto);
    grid-template-rows: repeat(2,auto);
    gap: 2rem;
}
.faqs > article:nth-of-type(3) .answer > .option:nth-of-type(5) > h3{
    grid-column: 1/5;
    grid-row: 1;
    padding-bottom: 0rem;
}
.faqs > article:nth-of-type(3) .answer > .option:nth-of-type(6) > h3{
    grid-column: 1/3;
    grid-row: 1;
    padding-bottom: 0rem;
}
.faqs > article:nth-of-type(3) .answer > .option:nth-of-type(5) > div > p,
.faqs > article:nth-of-type(3) .answer > .option:nth-of-type(6) > div > p{
    font-size: 1.2rem;
    font-weight: 700;
    margin-bottom: 1em;
    color: var(--site-color-accent2);
}
.faqs > article:nth-of-type(3) .answer > .option:nth-of-type(5) > div > p > .price,
.faqs > article:nth-of-type(3) .answer > .option:nth-of-type(6) > div > p > .price{
    font-size: 1.5rem;
    padding: 0rem 10px;
    color: var(--site-color-accent1);
    font-weight: 700;
}

.faqs > article:nth-of-type(4) .answer{
    padding: 0 2rem;

    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: auto;
    gap: 2rem;
}
.faqs .answer .option{
    position: relative;
    isolation: isolate;
    padding: 2rem 1rem;
    
    box-shadow: 5px 5px 50px black;

    display:grid;
    place-content: center;

    opacity: 0;
    transition: opacity 800ms ease-in-out calc(var(--i) * 100ms);
}
.faqs .answer .option::before{
    content: "";
    position: absolute;
    top: 0%; left: 0%;
    width: 100%;
    height: 100%;
    border-radius: 10px;
    background-image: var(--bg-gradient-glass);
    z-index: -1;
}

.faqs .answer.show .option{
    opacity: 1;
}
.faqs .answer .option > h3{
    padding-bottom: 1.5rem;
    text-align: center;
    font-size: 1.5rem;
    font-weight: 900;
    text-transform: uppercase;
}
.faqs .answer .option > p{
    max-width: 300px;
    text-align: center;
    font-size: 1.2rem;
    line-height: 1.5em;
    margin: 0 auto 1rem auto;
}
.faqs .answer .option > p > a{
    text-decoration: none;
    font-size: 1.2rem;
    font-weight: 700;
    line-height: 1.5rem;
    color: var(--fc-primary);
    white-space: nowrap;
    padding: 0rem .5rem;
}
.faqs .answer .option > p > span{
    font-weight: 700;
    color: var(--site-color-accent2);
}
.faqs .answer .option > p .price{
    font-size: 1.5rem;
    padding: 0rem 10px;
    color: var(--site-color-accent1);
}
.faqs .answer .option .contact-page-link{
    --option-link-style-size: 40px;
    position: relative;
    isolation: isolate;
    text-shadow: 2px 2px 3px black;
}
.faqs .answer .option .contact-page-link::before{
    content: "";
    position: absolute;
    top: 50%; left: 50%;
    width: var(--option-link-style-size);
    height: var(--option-link-style-size);
    border-radius: 50%;
    background: var(--site-gradient);
    z-index: -1;

    transform: translate(-50%,-50%);
}
.faqs .answer .option .contact-page-link::after{
    content: "";
    position: absolute;
    top: 50%; left: 50%;
    width: calc(var(--option-link-style-size) * .8);
    height: calc(var(--option-link-style-size) * .8);
    border-radius: 50%;
    background-color: var(--bc-primary);
    z-index: -1;

    transform: translate(-50%,-50%);
}
/* ... */

